Loan application validation added

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ result.error.unknown=Unknown error
 apply.result.ok=Loan created successfully
 apply.result.ko.highRisk=Risk associated to the loan is too high
 apply.result.ko.activeLoanFound=Client already has an active loan
+apply.result.ko.validation=Please review loan application parameters, one or more are invalid
 
 extend.term=1
 extend.interest=1.5
